# cvi4

./: .gitignore  .gitmodules  01-introduction.ipynb  02-image-representation.ipynb  03-image-filtering.ipynb  07-cnns.ipynb  08-vision-transformers.ipynb  09-object-detection.ipynb  README.md  pyproject.toml
11/: clip_utils.py  dinov3_utils.py  fruits360_clip.ipynb  fruits360_dinov3.ipynb  pyproject.toml  readme.md  requirements.txt
12/: dinov3_patch_segmentation.ipynb  dinov3_seg_utils.py  sam3_seg_utils.py  sam3_segmentation.ipynb  tipsv2_seg_utils.py  tipsv2_segmentation.ipynb
