[project]
name = "cvi4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "scikit-learn>=1.8.0",
    "timm>=1.0.27",
    "torch>=2.0",
    "torchvision>=0.15",
    "ultralytics>=8.0",
]
