[project]
name = "cvi4ic-lecture_11_12"
version = "0.1.0"
description = "Dependencies for lecture 11 and 12"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "annotated-doc==0.0.4",
  "anyio==4.13.0",
  "argon2-cffi==25.1.0",
  "argon2-cffi-bindings==25.1.0",
  "arrow==1.4.0",
  "asttokens==3.0.1",
  "async-lru==2.3.0",
  "attrs==26.1.0",
  "babel==2.18.0",
  "beautifulsoup4==4.14.3",
  "bleach==6.3.0",
  "certifi==2026.5.20",
  "cffi==2.0.0",
  "charset-normalizer==3.4.7",
  "click==8.4.1",
  "clip==1.0",
  "comm==0.2.3",
  "contourpy==1.3.2",
  "cycler==0.12.1",
  "debugpy==1.8.20",
  "decorator==5.3.1",
  "defusedxml==0.7.1",
  "exceptiongroup==1.3.1",
  "executing==2.2.1",
  "fastjsonschema==2.21.2",
  "filelock==3.29.0",
  "fonttools==4.63.0",
  "fqdn==1.5.1",
  "fsspec==2026.4.0",
  "ftfy==6.3.1",
  "h11==0.16.0",
  "hf-xet==1.5.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "huggingface-hub==1.17.0",
  "idna==3.17",
  "ipykernel==7.2.0",
  "ipython==8.39.0",
  "ipywidgets==8.1.8",
  "isoduration==20.11.0",
  "jedi==0.20.0",
  "jinja2==3.1.6",
  "joblib==1.5.3",
  "json5==0.14.0",
  "jsonpointer==3.1.1",
  "jsonschema==4.26.0",
  "jsonschema-specifications==2025.9.1",
  "jupyter-client==8.8.0",
  "jupyter-core==5.9.1",
  "jupyter-events==0.12.1",
  "jupyter-lsp==2.3.1",
  "jupyter-server==2.19.0",
  "jupyter-server-terminals==0.5.4",
  "jupyterlab==4.5.7",
  "jupyterlab-pygments==0.3.0",
  "jupyterlab-server==2.28.0",
  "jupyterlab-widgets==3.0.16",
  "kiwisolver==1.5.0",
  "lark==1.3.1",
  "markdown-it-py==4.2.0",
  "markupsafe==3.0.3",
  "matplotlib==3.10.9",
  "matplotlib-inline==0.2.2",
  "mdurl==0.1.2",
  "mistune==3.2.1",
  "mpmath==1.3.0",
  "nbclient==0.10.4",
  "nbconvert==7.17.1",
  "nbformat==5.10.4",
  "nest-asyncio==1.6.0",
  "networkx==3.4.2",
  "notebook-shim==0.2.4",
  "numpy==2.2.6",
  "nvidia-cublas-cu12==12.1.3.1",
  "nvidia-cuda-cupti-cu12==12.1.105",
  "nvidia-cuda-nvrtc-cu12==12.1.105",
  "nvidia-cuda-runtime-cu12==12.1.105",
  "nvidia-cudnn-cu12==9.1.0.70",
  "nvidia-cufft-cu12==11.0.2.54",
  "nvidia-curand-cu12==10.3.2.106",
  "nvidia-cusolver-cu12==11.4.5.107",
  "nvidia-cusparse-cu12==12.1.0.106",
  "nvidia-nccl-cu12==2.21.5",
  "nvidia-nvjitlink-cu12==12.9.86",
  "nvidia-nvtx-cu12==12.1.105",
  "overrides==7.7.0",
  "packaging==26.2",
  "pandas==2.3.3",
  "pandocfilters==1.5.1",
  "parso==0.8.7",
  "pexpect==4.9.0",
  "pillow==12.2.0",
  "platformdirs==4.10.0",
  "prometheus-client==0.25.0",
  "prompt-toolkit==3.0.52",
  "psutil==7.2.2",
  "ptyprocess==0.7.0",
  "pure-eval==0.2.3",
  "pycparser==3.0",
  "pygments==2.20.0",
  "pyparsing==3.3.2",
  "python-dateutil==2.9.0.post0",
  "python-json-logger==4.1.0",
  "pytz==2026.2",
  "pyyaml==6.0.3",
  "pyzmq==27.1.0",
  "referencing==0.37.0",
  "regex==2026.5.9",
  "requests==2.34.2",
  "rfc3339-validator==0.1.4",
  "rfc3986-validator==0.1.1",
  "rfc3987-syntax==1.1.0",
  "rich==15.0.0",
  "rpds-py==0.30.0",
  "safetensors==0.7.0",
  "scikit-learn==1.7.2",
  "scipy==1.15.3",
  "seaborn==0.13.2",
  "send2trash==2.1.0",
  "sentencepiece==0.2.1",
  "shellingham==1.5.4",
  "six==1.17.0",
  "soupsieve==2.8.4",
  "stack-data==0.6.3",
  "sympy==1.13.1",
  "terminado==0.18.1",
  "threadpoolctl==3.6.0",
  "tinycss2==1.4.0",
  "tokenizers==0.22.2",
  "tomli==2.4.1",
  "torch==2.5.1+cu121",
  "torchvision==0.20.1+cu121",
  "tornado==6.5.6",
  "tqdm==4.67.3",
  "traitlets==5.15.0",
  "transformers==5.9.0",
  "triton==3.1.0",
  "typer==0.25.1",
  "typing-extensions==4.15.0",
  "tzdata==2026.2",
  "uri-template==1.3.0",
  "urllib3==2.7.0",
  "wcwidth==0.7.0",
  "webcolors==25.10.0",
  "webencodings==0.5.1",
  "websocket-client==1.9.0",
  "widgetsnbextension==4.0.15",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
